--- a/FRB_Attendance_Monitoring/students/templates/home.html
+++ b/FRB_Attendance_Monitoring/students/templates/home.html
@@ -54,7 +54,7 @@
         <div class="col md-3"> 
                   <p class="text-center ">We envision an innovative and user-friendly application that simplifies attendance tracking and eliminates the need for traditional paper-based systems.</p>
                 <h4 class="text-center ">
-                    <a class="btn btn-primary" href="#" role="button">Get Started</a>
+                    <a class="btn btn-primary" href="{% url 'account_login' %}" role="button">Get Started</a>
                 </h4>
         </div>
 
