--- a/FRB_Attendance_Monitoring/staff/templates/index.html
+++ b/FRB_Attendance_Monitoring/staff/templates/index.html
@@ -13,7 +13,7 @@ Login - Facial Recognition System
             <h4>Login</h4>
           </div>
           <div class="card-body">
-            <form>
+            <form value="">
               <div class="form-group">
                 <label for="email">Email address</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email">
