--- a/FRB_Attendance_Monitoring/staff/templates/index.html
+++ b/FRB_Attendance_Monitoring/staff/templates/index.html
@@ -25,7 +25,7 @@ Login - Facial Recognition System
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Login</button>
                 <p class="pt-3">OR</p>
-                <a href=""><p>Contact Admin to be Registered</p></a>
+                <a href="{% url 'admincontact' %}"><p>Contact Admin to be Registered</p></a>
               </div>
             </form>
           </div>
